# 01-rcli

./: Cargo.toml  README.md  cliff.toml
.github/workflows/: build.yml
src/: opts.rs  process.rs
