[package]
name = "rcli"
version = "0.1.0"
authors = ["YHZhu <ihatakekage@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.6", features = ["derive"]}
csv = "1.3.0"
# duckdb = { version = "1.2.1", features = ["bundled"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
